# pgwerk

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
assets/: lightbox.css
changelog/: index.html
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: StatusBadge.tsx
dashboard/src/components/cron/: TriggerCronDialog.tsx
dashboard/src/components/jobs/: ExecutionHistory.tsx  JobDetail.tsx  JobFilters.tsx  JobsTable.tsx  SendJobDialog.tsx
dashboard/src/components/layout/: Header.tsx  Logo.tsx  Sidebar.tsx  TopNav.tsx
dashboard/src/components/overview/: JobStatusPieChart.tsx  QueueDepthChart.tsx  QueueTable.tsx  StatCards.tsx  ThroughputChart.tsx
dashboard/src/components/workers/: WorkerCard.tsx  WorkersList.tsx
dashboard/src/hooks/: useTheme.ts  useWorkerHistory.ts
dashboard/src/lib/: api.ts  utils.ts
dashboard/src/pages/: CronPage.tsx  JobsPage.tsx  MaintenancePage.tsx  OverviewPage.tsx  WorkerDetailPage.tsx  WorkersPage.tsx
docs/: index.md
docs/assets/: lightbox.css  lightbox.js
docs/guide/: cli.md  cron.md  dashboard.md  enqueueing.md  quickstart.md  serializers.md  workers.md
docs/reference/: app.md  exceptions.md  schemas.md  workers.md
example/: __init__.py  producer.py  tasks.py  worker.py
guide/: dashboard.md  enqueueing.md  quickstart.md  serializers.md
guide/cli/: index.html
guide/cron/: index.html
guide/dashboard/: index.html
guide/enqueueing/: index.html
guide/quickstart/: index.html
guide/serializers/: index.html
guide/workers/: index.html
pgwerk/: __init__.py  app.py  config.py  cron.py  database.py  exceptions.py  logging.py  repos.py  schemas.py  serializers.py  utils.py
pgwerk/api/: app.py  routes.py
pgwerk/cli/: api.py  dashboard.py  stats.py  throughput.py  utils.py
pgwerk/exporter/: __init__.py
pgwerk/integration/: conftest.py  test_api_smoke.py  test_apply.py  test_before_after_process_hooks.py  test_concurrency.py  test_dependencies.py  test_enqueue.py  test_enqueue_many.py  test_expired_jobs.py  test_failure_mode.py  test_fork_worker.py  test_get_job.py  test_group_key.py  test_job_heartbeat.py  test_lifecycle_hooks.py  test_map.py  test_process_worker.py  test_prod_paths.py  test_race_detection.py  test_robustness.py  test_sweep.py  test_thread_worker.py  test_unique_key.py  test_wait_for.py  test_worker_execution.py  test_worker_failure.py  test_worker_repeat.py  test_worker_retry.py  test_wrk_init.py
pgwerk/unit/: test_app_helpers.py  test_cli.py  test_commons.py  test_cron.py  test_database.py  test_exceptions.py  test_job.py  test_schema_consistency.py  test_serializers.py  test_worker_aio.py  test_worker_base.py  test_worker_variants.py
pgwerk/worker/: base.py  fork.py  process.py
reference/app/: index.html
reference/exceptions/: index.html
reference/schemas/: index.html
reference/workers/: index.html
search/: search_index.json
tests/integration/: conftest.py  tasks.py  test_api_smoke.py  test_apply.py  test_before_after_process_hooks.py  test_concurrency.py  test_concurrency_limit.py  test_dependencies.py  test_enqueue.py  test_enqueue_many.py  test_expired_jobs.py  test_failure_mode.py  test_fork_worker.py  test_get_executions.py  test_get_job.py  test_group_key.py  test_job_heartbeat.py  test_job_termination.py  test_lifecycle_hooks.py  test_list_jobs.py  test_map.py  test_process_worker.py  test_prod_paths.py  test_race_detection.py  test_robustness.py  test_sweep.py  test_thread_worker.py  test_unique_key.py  test_wait_for.py  test_worker_callbacks.py  test_worker_execution.py  test_worker_failure.py  test_worker_lifecycle.py  test_worker_repeat.py  test_worker_retry.py  test_wrk_init.py
tests/unit/: test_app_helpers.py  test_cli.py  test_commons.py  test_cron.py  test_database.py  test_exceptions.py  test_job.py  test_schema_consistency.py  test_serializers.py  test_worker_aio.py  test_worker_base.py  test_worker_variants.py
wrk/: __init__.py  app.py  commons.py  config.py  cron.py  database.py  exceptions.py  logging.py  repos.py  schemas.py  serializers.py  utils.py
wrk/api/: app.py  models.py  routes.py
wrk/cli/: __init__.py  api.py  cron.py  info.py  jobs.py  purge.py  slowest.py  worker.py
wrk/exporter/: __init__.py
wrk/worker/: __init__.py  aio.py  base.py  fork.py  process.py  thread.py
