[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgwerk"
version = "0.1.1"
description = "Postgres-backed job queue. Durable, visible, transactional."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "pgwerk", email = "21188280+ccrvlh@users.noreply.github.com" }]
requires-python = ">=3.11"
keywords = [
    "postgres",
    "job queue",
    "task queue",
    "worker",
    "background jobs",
    "asyncio",
    "postgresql",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = ["psycopg[async]>=3.1", "psycopg-pool>=3.1", "click>=8.0"]

[project.urls]
Repository = "https://github.com/pgwerk/pgwerk"
Homepage = "https://pgwerk.github.io/pgwerk"
Documentation = "https://pgwerk.github.io/pgwerk"
"Bug Tracker" = "https://github.com/pgwerk/pgwerk/issues"

[project.scripts]
werk = "pgwerk.cli:main"

[project.optional-dependencies]
api = ["litestar>=2.0", "uvicorn>=0.30"]
cron = ["croniter>=2.0"]
exporter = ["prometheus-client>=0.8"]
analytics = ["rich>=13.0", "plotext>=5.0"]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "croniter>=2.0",
    "litestar>=2.0",
    "uvicorn>=0.30",
    "prometheus-client>=0.8",
    "rich>=13.0",
    "plotext>=5.0",
    "mkdocs-shadcn>=0.10",
    "types-croniter>=6.2.2.20260408",
]


[tool.ruff]
exclude = [
    ".archive",
    ".roo",
    ".github",
    "migrations",
    "docs",
    "infra",
    "scripts",
    "static",
]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D100",
    "D104",
    "D107",
    "E712",
]

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
force-sort-within-sections = false
forced-separate = ["tests"]
known-first-party = ["pgwerk"]
known-third-party = ["litestar"]
length-sort = true
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["pgwerk"]
artifacts = ["pgwerk/api/static"]
